Updating UserChange page to allow requests to be made